[package]
name = "floaout"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Floaout encoding and decoding library."
readme = "README.md"
repository = "https://github.com/kurotakazuki/floaout"
categories = ["multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "immersive", "sound", "codec", "bub", "oao", "wav"]

[dependencies]
mpl = "0.1"
mycrc = "0.3"